@@ -6,12 +6,13 @@ inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
 inc/Module/Install/Include.pm
+inc/Module/Install/Makefile.pm
 inc/Module/Install/Metadata.pm
 inc/Module/Install/Win32.pm
 inc/Module/Install/WriteAll.pm
 lib/MooseX/Types/Moose/Overload.pm
+Makefile.PL
 MANIFEST			This list of files
-MANIFEST.SKIP
 META.yml
 README
 t/00-load.t
