@@ -1,6 +1,0 @@
-.*.old$
-.*.swp$
-Makefile
-MANIFEST.bak
-.gitignore$
-.git/*
