@@ -27,4 +27,4 @@ resources:
   homepage: http://github.com/EvanCarroll/MX--T--M--Overload
   license: http://dev.perl.org/licenses/
   repository: git://github.com/EvanCarroll/MX--T--M--Overload.git
-version: 0.01_06
+version: 0.01_07
