@@ -1,12 +1,19 @@
 Revision history for MooseX-Types-Moose-Overload
 
-0.03    July 6, 2009
+0_07    July 5, 2009
+        Added a makefile, fixed changes, manifest.skip and some other stuff
+
+0_06    July 5, 2009
+        We now return fresh copies of the base types and work
+        with MooseX::Types::Moose.
+
+0_05    July 6, 2009
         We now work in a more MooseX::Types fashion. Please see
         the section on future proofing. Much of the current behavoir
         is viewed as a side-effect of not cloning MXT:Moose's types.
 
-0.02    Added MooseX::Types as a requirement
+0_02    Added MooseX::Types as a requirement
 
-0.01    Dec 15, 2008
+0_01    Dec 15, 2008
         First version, released on an unsuspecting world.
 
